Frontend da pagina de confirmacao do cadastro pessoa fisica

--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -32,6 +32,7 @@
 @import '5-pages/p-formulario';
 @import '5-pages/p-termos';
 @import '5-pages/p-agentes';
+@import '5-pages/p-confirmacao';
 
 /* ----- 6: VENDORS ------- */
 // @import './../example-vendor/sss.css';
