--- a/assets-src/sass/1-settings/_s-globals.scss
+++ b/assets-src/sass/1-settings/_s-globals.scss
@@ -1,3 +1,10 @@
 .inactive {
   display: none;
 }
+.log-execution-time {
+  color: $brand-secondary;
+  font-family: Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace;
+  font-size: $font-size-smaller;
+  padding-left: 20px;
+  padding-right: 20px;
+}
