--- a/assets-src/sass/5-pages/_p-cadastro.scss
+++ b/assets-src/sass/5-pages/_p-cadastro.scss
@@ -67,6 +67,7 @@ section.cadastro {
     .selected {
         background-color: $brand-primary;
         transition: all 0.2s ease-in-out;
+        transform: scale(1.1);
 
         .informative-box--icon {
             i {
