disable hover dos cards

--- a/assets-src/sass/5-pages/_p-cadastro.scss
+++ b/assets-src/sass/5-pages/_p-cadastro.scss
@@ -89,6 +89,14 @@ section.cadastro {
     .questions{
         text-align: center;
 
+        .select2-container {
+            max-width: 60%;
+
+            @include mobile {
+                max-width: 90%;
+            }
+        }
+
         p{
             font-family: $f_title;
         }
