--- a/assets-src/sass/5-pages/_p-cadastro.scss
+++ b/assets-src/sass/5-pages/_p-cadastro.scss
@@ -113,10 +113,12 @@ section.cadastro {
             font-family: $f_title;
         }
 
-        &--summay{
-            font-size:16px;
+        &--summary{
+            font-size: 16px;
             line-height: 19px;
             text-align: center;
+            max-width: 320px;
+            margin: 0 auto;
         }
 
         &--note{
