--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -25,6 +25,7 @@
 @import '4-components/c-informative-box';
 @import '4-components/c-modal';
 @import '4-components/c-term';
+@import '4-components/c-built-select';
 
 
 /* ----- 5: PAGES ------- */
