Ajuste na modal de alerta.

--- a/assets-src/sass/4-components/_c-modal.scss
+++ b/assets-src/sass/4-components/_c-modal.scss
@@ -41,6 +41,10 @@
             padding: 0;
         }
 
+        .btn-ok{
+            @extend .btn;
+        }
+
         .close {
             color: #aaa;
             float: right;
