Ajustes no js para esconder a modal quando clicar fora dela.

--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -13,7 +13,9 @@ article.registration {
         margin-bottom: 35px;
         font-weight: bold;
     }
-
+    #editable-entity{
+        visibility: hidden;
+    }
     .registration-header {
         display: none;
     }
