Ajuste no css de seleção do agente.

--- a/assets-src/sass/5-pages/_p-agentes.scss
+++ b/assets-src/sass/5-pages/_p-agentes.scss
@@ -12,11 +12,11 @@
     }
 
     &--summary {
-        display: flex;
-        justify-content: center;
         text-align: center;
         font-family: $headings-font-family;
         max-width: 320px;
+        margin: 0 auto;
+        padding-bottom: 30px;
     }
 
     &--thumbnail {
