--- a/assets-src/sass/4-components/_c-informative-box.scss
+++ b/assets-src/sass/4-components/_c-informative-box.scss
@@ -259,6 +259,7 @@
                 justify-content: center;
                 align-items: center;
                 display: flex;
+                min-width: 38px;
                 font-size: 22px;
                 
                 &:before {
