--- a/assets-src/sass/4-components/_c-modal.scss
+++ b/assets-src/sass/4-components/_c-modal.scss
@@ -23,10 +23,14 @@
     .modal-content {
         @extend .card;
         box-sizing: border-box;
-        position: relative;
+        position: absolute;
         text-align: center;
         width: 60%;
         height: fit-content;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
 
         @include mobile {
             width: calc(100% - 30px);
