Adicionei as logos do Pará e alterei a cor padrão.

--- a/assets-src/sass/1-settings/_s-variables.scss
+++ b/assets-src/sass/1-settings/_s-variables.scss
@@ -17,7 +17,7 @@ $gray: #ccc !default;
 $gray-light: #e2e2e2 !default;
 $gray-lighter: #eee !default;
 
-$brand-primary: #31AAC9 !default;
+$brand-primary: #3275B6 !default;
 $brand-primary-light: color.scale($brand-primary, $lightness: 20%) !default;
 $brand-accent: #000000 !default;
 
