--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -37,7 +37,7 @@ article.registration {
         }
 
         .submit-attach-opportunity {
-            @extend .btn--primary;
+            // @extend .btn--primary;
         }
     }
     
