Adiciona respiro lateral para modal de uploud

--- a/assets-src/sass/4-components/_c-button.scss
+++ b/assets-src/sass/4-components/_c-button.scss
@@ -26,11 +26,11 @@
     white-space: inherit;
     width: auto;
 
-    &.secondary {
+    &.secondary, &--secondary {
         background-color: $brand-secondary;
     };
 
-    &.tertiary {
+    &.tertiary,  &--tertiary {
         background-color: $brand-tertiary;
     };
 
