--- a/assets-src/sass/4-components/_c-modal.scss
+++ b/assets-src/sass/4-components/_c-modal.scss
@@ -41,8 +41,8 @@
             font-size: $font-size-h4;
             font-weight: bold;
             line-height: 1.4;
-            margin: 0 0 25px;
-            padding: 0;
+            margin: 0 auto;
+            padding: 18px;
         }
 
         .btn-ok{
