--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -14,6 +14,32 @@ article.registration {
         font-weight: bold;
     }
 
+    .errors {
+        text-align:left;
+        font-size: 12px;
+        color: $brand-tertiary;
+        text-align:left;
+        a{
+            color: $brand-tertiary;
+        }
+        &-header{
+            margin-top:10px;
+            margin-bottom:10px;
+            text-align:center;
+            color: $brand-tertiary;
+            &-title{
+                font-size: 14px;
+                font-weight: bolder;
+                font-family: "Open Sans", Helvetica, Arial, sans-serif;
+            }
+        }
+        &-field{
+            color: $brand-tertiary;
+            font-weight: normal;
+        }
+    }
+
+
     #editable-entity{
         visibility: hidden;
     }
@@ -114,6 +140,7 @@ article.registration {
                     font-size: $font-size-base;
                     font-weight: lighter;
                     text-transform: capitalize;
+                    word-wrap: break-word;
                 }
 
                 // Descrição dos campos
