--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -4,6 +4,7 @@ article.registration {
     float: none;
     margin-left: auto;
     margin-right: auto;
+    word-wrap: break-word;
 
     h1 {
         font-size: $font-size-h3;
@@ -19,6 +20,7 @@ article.registration {
         font-size: 12px;
         color: $brand-tertiary;
         text-align:left;
+        word-wrap: break-word;
         a{
             color: $brand-tertiary;
         }
