--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -12,7 +12,11 @@ article.registration {
         line-height: 1.9375rem;
         text-align: center;
         margin-bottom: 35px;
+        padding-top: 35px;
         font-weight: bold;
+        max-width: 300px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .errors {
