--- a/assets-src/sass/5-pages/_p-cadastro.scss
+++ b/assets-src/sass/5-pages/_p-cadastro.scss
@@ -50,6 +50,7 @@ section.cadastro {
                 a {
                     text-decoration: none;
                 }
+
                 div.btn  {
                     width: 80%;
                     margin: 0 auto;
@@ -208,5 +209,14 @@ section.cadastro {
             }
         }
     }
+
+    .help-section {
+        max-width: 58%;
+        margin: 0 auto;
+        text-align: center;
+        margin-top: 80px;
+        margin-bottom: 40px;
+    }
 }
+
 
