--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -1,3 +1,11 @@
+
+#editable-entity{
+    border-left: none!important;
+    background: transparent!important;
+    margin-top: 67px;
+    box-shadow:none;
+}
+
 article.registration {
     
     background: none;
@@ -45,10 +53,6 @@ article.registration {
         }
     }
 
-
-    #editable-entity{
-        visibility: hidden;
-    }
     .registration-header {
         display: none;
     }
