Corrige erro do botão sem ação. Adiciona estilos para listagem de espaços. Iniciar refatoração do checked

--- a/assets-src/sass/4-components/_c-informative-box.scss
+++ b/assets-src/sass/4-components/_c-informative-box.scss
@@ -101,6 +101,12 @@
         justify-content: center;
         align-items: center;
 
+        img.thumbnail {
+            z-index: 1;
+            border-radius: 50%;
+            border: 0px;
+        }
+
         i {
             z-index: 99;
             font-size: 20px;
