Substitui checked icons por icones minus deixando interface mais intuitiva

--- a/assets-src/sass/4-components/_c-informative-box.scss
+++ b/assets-src/sass/4-components/_c-informative-box.scss
@@ -39,7 +39,7 @@
         opacity: 0.5;
     }
 
-    &.active, &:not(.disabled):hover {
+    &.active, &.selected, &:not(.disabled):hover {
         background-color: $brand-primary;
         transition: all 0.2s ease-in-out;
 
