--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -32,10 +32,9 @@
 @import '5-pages/p-cadastro';
 @import '5-pages/p-formulario';
 @import '5-pages/p-termos';
-@import '5-pages/p-agentes';
+@import '5-pages/p-agentes-espacos';
 @import '5-pages/p-confirmacao';
 @import '5-pages/p-status';
-@import '5-pages/p-espacos';
 
 /* ----- 6: VENDORS ------- */
 // @import './../example-vendor/sss.css';
