--- a/assets-src/sass/5-pages/_p-agentes-espacos.scss
+++ b/assets-src/sass/5-pages/_p-agentes-espacos.scss
@@ -1,9 +1,9 @@
-.agentes {
+.agentes, .espaco {
     h3 {
         text-align: center;
     }
 
-    i {
+    i:not(.fa-minus) {
         display: flex;
         justify-content: center;
         padding: 2%;
@@ -64,9 +64,9 @@
     }
 
     &--item {
-
         &.active,
         &:hover {
+            transform: scale(1.05);
             span {
                 color: white;
             }
@@ -77,5 +77,20 @@
     &--btn {
         display: flex;
         justify-content: center;
+    }
+
+    .informative-box--title {
+        i.fa-minus  {
+            border: 4px solid;
+            border-radius: 50%;
+            width: 36px;
+            height: 36px;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            padding: 0;
+            min-width: 36px;
+            font-size: 22px;
+        }
     }
 }
