--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -296,6 +296,10 @@ article.registration {
 
                 input {
                     width: 100%;
+
+                    &[type='checkbox'] {
+                        width: auto;
+                    }
                 }
             }
             
