--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -265,6 +265,10 @@ article.registration {
 
                 input {
                     width: 100%;
+
+                    &[type='checkbox'] {
+                        width: auto;
+                    }
                 }
             }
             
