remove a seção categorias do formulário (refs: #73)

--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -11,6 +11,11 @@
     }
 }
 
+h2.category {
+    font-size: 1em;
+    text-align: center;
+}
+
 article.registration {
     
     background: none;
