remove a seção categorias do formulário (refs: #73)

--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -6,6 +6,11 @@
     box-shadow:none;
 }
 
+h2.category {
+    font-size: 1em;
+    text-align: center;
+}
+
 article.registration {
     
     background: none;
