--- a/assets/aldirblanc/app.css
+++ b/assets/aldirblanc/app.css
@@ -7969,8 +7969,18 @@ section.cadastro .questions--nav .modal .modal-content .btn-ok,
 #editable-entity {
   border-left: none !important;
   background: transparent !important;
-  margin-top: 67px;
+  margin: 0 !important;
   box-shadow: none;
+}
+
+#editable-entity .alert {
+  margin-top: 50px;
+  margin-bottom: -50px;
+}
+
+h2.category {
+  font-size: 1em;
+  text-align: center;
 }
 
 h2.category {
@@ -8166,7 +8176,7 @@ article.registration .registration-fieldset .attachment-list .attachment-list-it
 }
 
 article.registration .registration-fieldset .alert.danger {
-  display: none;
+  display: none !important;
   background: none;
   border: 0;
   margin-bottom: 0;
@@ -8212,6 +8222,12 @@ article.registration .registration-fieldset ul li textarea {
 article.registration .registration-fieldset ul li.attachment-list-item-type-checkboxes p {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+}
+
+@media (max-width: 1024px) {
+  article.registration .registration-fieldset ul li.attachment-list-item-type-checkboxes p {
+    grid-template-columns: auto;
+  }
 }
 
 article.registration .registration-fieldset ul li.attachment-list-item-type-checkboxes p label {
