Adiciona variaveis de customização e refatora scss

--- a/assets-src/sass/3-layout/_l-footer.scss
+++ b/assets-src/sass/3-layout/_l-footer.scss
@@ -1,5 +1,5 @@
 footer#main-footer {
-    background-color: $light;
+    background-color: var(--footer-background);
     height: 60px;
     margin-top: 30px;
     padding: 20px;
