--- a/assets-src/sass/4-components/_c-term.scss
+++ b/assets-src/sass/4-components/_c-term.scss
@@ -11,7 +11,7 @@
 
 .term{
   @extend .card;
-  font-family: $headings-font-family;
+  font-family: $f_title;
   display: flex;
   margin: 15px;
   align-items: center;
