--- a/assets-src/sass/5-pages/_p-termos.scss
+++ b/assets-src/sass/5-pages/_p-termos.scss
@@ -2,7 +2,7 @@
     margin-top: 100px;
 
     h2 {
-        font-family: $headings-font-family;
+        font-family: $f_title;
         text-align: center;
         font-weight: bold;
         padding-top: 20px;
@@ -14,7 +14,7 @@
     }
 
     &--summay {
-        font-family: $headings-font-family;
+        font-family: $f_title;
         text-align: center;
         margin: auto;
         padding-left: 8%;
