--- a/assets-src/sass/3-layout/_l-header.scss
+++ b/assets-src/sass/3-layout/_l-header.scss
@@ -1,24 +1,31 @@
 header {
     position: relative;
+
+    &#main-header {
+        background-color: var(--header-background);
+    }
+
     .logo-state {
         display: none;
         height: auto;
         margin: 0 auto;
         padding: 10px;
-        @include transition(all, 0.3s, ease-in-out);
         width: 200px;
+        @include transition(all, 0.3s, ease-in-out);
         @include desktop {
             display: block;
             left: 0;
             position: absolute;
         }
     }
+
     .logo {
         height: auto;
         margin: 0 auto;
         padding-top: 5px;
         width: 200px;
     }
+
     .logout {
         height: 100%;
         padding: 0 15px;
