--- a/assets-src/sass/5-pages/_p-agentes-espacos.scss
+++ b/assets-src/sass/5-pages/_p-agentes-espacos.scss
@@ -12,7 +12,7 @@
 
     &--summary {
         text-align: center;
-        font-family: $headings-font-family;
+        font-family: $f_title;
         max-width: 320px;
         margin: 0 auto;
         padding-bottom: 30px;
