--- a/assets-src/sass/4-components/_c-status-card.scss
+++ b/assets-src/sass/4-components/_c-status-card.scss
@@ -8,7 +8,7 @@
     @extend .card;
     background-color: $brand-primary;
     color: $light;
-    display: inline-block;
+    display: block;
     font-size: $font-size-base;
     line-height: 1.4;
     margin-bottom: 5px;
