--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -271,6 +271,7 @@ article.registration {
                     p {
                         display: grid;
                         grid-template-columns: repeat(2, 1fr);
+                        grid-row-gap: 15px;
 
                         @include tablet {
                             grid-template-columns: auto;
@@ -278,10 +279,11 @@ article.registration {
 
                         label  {
                             display: flex;
-                            align-items: center;
+                            align-items: flex-start;
 
                             input[type="checkbox"] {
                                 margin-right: 5px;
+                                margin-top: 5px;
                                 width: auto;
                             }
                         }
