Adiciona logos e corrige posicionamentos no header

--- a/assets/aldirblanc/customization.css
+++ b/assets/aldirblanc/customization.css
@@ -1,7 +1,7 @@
 :root {
     /* LAYOUT PARTS */
     /* Header */
-    --header-background: #ffffff;
+    --header-background: #202047;
 
     /* Footer */
     --footer-background: #ffffff;
