--- a/assets-src/sass/4-components/_c-term.scss
+++ b/assets-src/sass/4-components/_c-term.scss
@@ -27,7 +27,7 @@
     height: 100%;
     left: -1px;
     width: 40px;
-    background-color: $brand-primary;
+    background-color: var(--primary-button-bg-color);
   }
 
   &--input{
