Adiciona variavel global para cor dos caracteres no header e footer

--- a/assets-src/sass/3-layout/_l-header.scss
+++ b/assets-src/sass/3-layout/_l-header.scss
@@ -54,7 +54,7 @@ header {
         }
 
         a {
-            color: white;
+            color: var(--header-color);
             display: block;
             margin-top: 15px;
             text-align: center;
