--- a/assets-src/sass/3-layout/_l-footer.scss
+++ b/assets-src/sass/3-layout/_l-footer.scss
@@ -1,5 +1,6 @@
 footer#main-footer {
     background-color: var(--footer-background);
+    color: var(--footer-color);
     height: 60px;
     margin-top: 30px;
     padding: 10px 20px 10px 10px;
@@ -7,7 +8,7 @@ footer#main-footer {
     @include box-shadow(0, 0, 5px, #999);
 
     a {
-        color: black;
+        color: var(--footer-color);
         display: inline-block;
 
         &.terms-conditions {
@@ -29,7 +30,7 @@ footer#main-footer {
     }
     .credits {
         float: right;
-        color: #111111;
+        color: var(--footer-color);
         font-family: $f_body;
         font-size: 14px;
         font-weight: bold;
